# mbse-concept

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: publish_documentation.yml
Let's talk about requirements/: index.html
What is Model-Based System Engineering/: index.html
docs/: Let's talk about requirements.md  What is Model-Based System Engineering.md
matlab/: requirements.slreqx
search/: search_index.json
