[project]
name = "mbse-concept"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.5.49",
    "mkdocs-publisher>=1.4.4",
    "mkdocs>=1.6.1",
    "pymdown-extensions>=10.14",
]
